# vibecoder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: tool_guidelines.md
tests/: conftest.py  test_main.py  test_mock_agent.py
tests/apis/: test_agent.py
tests/tools/: test_apply_diff_patch_tool.py  test_apply_patch.py  test_fetch_url_tool.py  test_git_tool.py  test_grep_tool.py  test_move_tool.py  test_pytest_tool.py  test_read_file.py  test_tool_signatures.py  test_tree_files.py  test_web_search.py  test_write_file.py
vibecoder/: agent_status.py  main.py  messages.py
vibecoder/agents/: __init__.py  agent.py  mock_agent.py  swe.py
vibecoder/prompts/: analyst.md  base.md  save_context.md  swe.md
vibecoder/prompts/tools/: apply_diff_patch.md  apply_patch.md  fetch_url.md  git_tool.md  grep.md  move.md  pytest.md  read_file.md  tree_files.md  web_search.md  write_file.md
vibecoder/tools/: __init__.py  apply_diff_patch.py  apply_patch.py  apply_patch_lib.py  base.py  fetch_url.py  git_tool.py  grep.py  move.py  pytest_tool.py  read_file.py  tree_files.py  web_search.py  write_file.py
