[tool.poetry]
name = "vibecoder"
version = "0.1.0"
description = "An agent with which to 'vibe code'"
authors = ["Brian Vaughan <brian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
python-dotenv = "*"
prompt_toolkit = "*"
openai = "*"
jinja2 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
