[project]
name = "vibecoder"
version = "0.1.0"
description = "An agent with which to 'vibe code'"
authors = [
    { name = "Brian Vaughan", email = "nairbv@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "python-dotenv",
    "prompt_toolkit",
    "openai",
    "jinja2",
    "markdownify",
    "aiofiles"
]

# For template files
[tool.setuptools.package-data]
vibecoder = ["**/*.md"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
